# NorConnect

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/static/: app.js  index.html  styles.css
db/migrations/: 0001_init.sql  0002_iati_staging.sql  0003_person_link.sql
db/neo4j/: 0001_constraints.cypher
db/whitelists/: palestine_norad_partner_whitelist.csv
scripts/: enrich_norad_oecd.py  harvest_iati_registry.py  ingest_excel.py  load_palestine_organizations.py  normalize_iati_staging.py  normalize_staging.py  run_migrations.py  seed_curated_network.py  sync_neo4j.py
src/nongo/: __init__.py
